# crop-search

./: .gitignore  AGENTS.md  README.md  SEARCH_EXPLORATION_SUMMARY.md  docker-compose.postgres.yml  pyproject.toml
.planning/: aggregate-relationship-discovery-plan.md  coverage-matrix.md  crop-relationship-matrix-plan.md  extraction-contract.md  generalized-crop-ontology-plan.md  hybrid-graph-implementation-plan.md  hybrid-relationship-evidence-graph-plan.md  intercropping-relationship-plan.md  opus-vault-extraction-plan.md  parameter-ontology-expansion-plan.md  pipeline-quality-rework-plan.md  relationship-and-protection-pipeline-plan.md  relationship-coverage-and-tiered-evidence-plan.md
docs/: ARCHITECTURE.md  CAPABILITY_MAP.md  HANDOFF.md  IMPLEMENTATION_LOG.md  ROADMAP.md
fixtures/: pilot_sources.json
schemas/: bbch-reference.schema.json  claim-review.schema.json  context-pack.schema.json  crop-profile.schema.json  crop-relationship-claim.schema.json  crop-relationship-matrix.schema.json  crop-relationship-query-plan.schema.json  crop-relationship-vocabulary.schema.json  durable-claims.schema.json  exploration-run.schema.json  hook-event.schema.json  mcp-server-manifest.schema.json  memory-entry.schema.json  normalized-claim.schema.json  parameter-coverage.schema.json  parameter-manifest.schema.json  raw-capture.schema.json  relationship-node-catalog.schema.json  seed-registry.schema.json  source-tier-manifest.schema.json
tests/: test_backfill.py  test_capabilities.py  test_corpus.py  test_discovery.py  test_discovery_connectors.py  test_eval_harness.py  (+22 more)
(+2512 files in other folders)
